# tilegrabber

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  components.json  float.html  index.html  latest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: requirements.md
docs/design/: design.pen
scripts/: pack-release.ps1  relink-msi.ps1  一键安装.bat.tpl
src/: App.vue  FloatApp.vue  float-main.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  float.json
src-tauri/icons/: icon.icns
src-tauri/installer-assets/: gen-installer-images.ps1
src-tauri/src/: lib.rs  main.rs  tile_math.rs  types.rs
src-tauri/src/commands/: layer.rs  math.rs  mod.rs  server.rs  settings.rs  source.rs  task.rs  tile_proxy.rs  updater.rs  web_capture.rs
src-tauri/src/download/: engine.rs  mod.rs  rules.rs  throttle.rs  worker.rs
src-tauri/src/export/: directory.rs  geotiff.rs  mbtiles.rs  mod.rs  tile_clip.rs
src-tauri/src/parser/: area_file.rs  lra.rs  lrc.rs  mod.rs  ovmap.rs  web_capture.rs  wmts.rs
src-tauri/src/server/: handlers.rs  mod.rs
src-tauri/src/storage/: app_db.rs  mod.rs  tile_store.rs
src/assets/css/: main.css
src/components/: AppHeader.vue  CloseActionDialog.vue  DisclaimerDialog.vue  SplashScreen.vue
src/components/map/: AreaDraw.vue  BoundsRectOverlay.vue  ClipProgressLayer.vue  DownloadProgressLayer.vue  LocalTaskTileLayer.vue  TileGrid.vue  (+3 more)
src/composables/: useExportJobs.ts  useTaskDetail.ts  useWizardState.ts
src/types/: tile-source.ts
(+18 files in other folders)
